[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Premendra Srivastava <prem38sri@gmail.com>"]
packages = [
    { include = "app.py", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
